--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <link rel="icon" type="image/png"  href="{% static 'todo/logo.png' %}">
+    <link rel="icon" type="image/png"  href="{% static 'todo/logo2.png' %}">
     <title>Todo+</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
 <nav class="navbar navbar-expand-md navbar-light bg-warning">
 <div class="container">
     <a class="navbar-brand" href="{% url 'home' %}">
-         <img src="{% static 'todo/logo.png' %}" width="30" height="30" class="d-inline-block align-top">
-        <span>Todo+</span>
+         <img src="{% static 'todo/logo2.png' %}" width="30" height="30" class="d-inline-block align-top">
+        <span><b>Todo+</b></span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,13 +29,13 @@
         <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item {{ current }}">
-                    <a class="nav-link" href="{% url 'currenttodos' %}">Current</a>
+                    <b><a class="nav-link" href="{% url 'currenttodos' %}">Current</a></b>
                 </li>
                 <li class="nav-item {{ completed }}">
-                    <a class="nav-link" href="{% url 'completedtodos' %}">Completed</a>
+                    <b><a class="nav-link" href="{% url 'completedtodos' %}">Completed</a></b>
                 </li>
                 <li class="nav-item {{ create }}">
-                    <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
+                    <b><a class="nav-link" href="{% url 'createtodo' %}">Create</a></b>
                 </li>
 
         </ul>
@@ -43,7 +43,7 @@
     <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
+                    <b><a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a></b>
                     <form style='display: none;' method="POST" action="{% url 'logoutuser' %}">
                         {% csrf_token %}
                         <button id="signOutBtn" type="submit">Logout</button>
@@ -51,10 +51,10 @@
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'signupuser' %}">Sign Up</a>
+                    <b><a class="nav-link" href="{% url 'signupuser' %}">Sign Up</a></b>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'loginuser' %}">Login</a>
+                    <b><a class="nav-link" href="{% url 'loginuser' %}">Login</a></b>
                 </li>
             {% endif %}
         </ul>
