--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -10,8 +10,8 @@
 <div class="row justify-content-center mt-5">
         <div class="col-md-7 text-center">
 
-                 <h1>Simply Your Todos !</h1>
-            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo+</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+                 <h1>Get Your Todos Done!</h1>
+            <p>Life is too short. Don't waste it! We created <b><i>Todo+</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life <u>awaits</u>.</p>
         <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
         </div>
     </div>
